# cbp2clangd

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  test_generate_ninja.rs  test_lib.cbp
docs/: ARCHITECTURE.md
src/: cb_config.rs  cli.rs  config.rs  generator.rs  lib.rs  main.rs  models.rs  parser.rs  utils.rs
tests/: chatbot.c  test_generator.rs  test_macros.cbp  test_parser.rs
