[package]
name = "cbp2clangd"
version = "1.1.3"
edition = "2024"

[lib]
name = "cbp2clangd"
path = "src/lib.rs"

[[bin]]
name = "cbp2clangd"
path = "src/main.rs"

[dependencies]
roxmltree = "0.21.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }
